<resources>
    <string name="app_name">小工具</string>

    <string name="get_device_info">获取设备信息</string>
    <string name="get_net_type">获取网络类型</string>
    <string name="get_ip">获取ip地址</string>
    <string name="get_mac">获取MAC</string>
    <string name="show_image_by_net_bitmap">通过URL获取bitmap图像</string>
    <string name="show_image_by_net_url">通过第三方工具显示网络图片</string>
    <string name="yincang">隐藏</string>
    <string name="load_file">下载文件</string>
    <string name="save_screen">截屏</string>
    <string name="get_net_speed">开始获取当前网速</string>
    <string name="broad_cast">动态注册广播</string>
    <string name="register_broad_cast">注册广播</string>
    <string name="send_broad_cast">发送广播</string>
    <string name="cancel">取消注册</string>
    <string name="sliding_menu">侧划菜单演示</string>
    <string name="navigation">引导页面</string>
    <string name="today">今日</string>
    <string name="settings">设置</string>
    <string name="media_player">MediaPlayer播放视频</string>
    <string name="qr_code">二维码生成与扫描</string>
    <string name="update_head">修改头像</string>
    <string name="float_window">1.浮动窗口</string>
    <string name="float_window_360">2.仿360手机卫士悬浮窗效果</string>
    <string name="float_window_qq">3.QQ手机管家小火箭效果实现</string>
    <string name="connect_wifi">连接wifi</string>
    <string name="set_wifi_hot">设置wifi热点</string>
    <string name="get_system_all_package_name">获取系统里所有程序包名</string>
    <string name="get_sdcard_url">获取内存目录和SD卡目录</string>
    <string name="navigationdrawer">Android导航抽屉-Navigation Drawer</string>
    <string name="fenping">分屏显示广告和网页</string>

    <!-- start 二维码扫描 -->
    <string name="scan_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="scan_onecode">将条形码放入框内，即可自动扫描</string>
    <string name="scan_qr">二维码</string>
    <string name="scan_one">条形码</string>
    <string name="scan_help">帮助</string>
    <string name="scan_scan">扫一扫</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_content">扫描内容</string>
    <string name="scan_back">返回</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机可能被占用，您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="action_settings">Settings</string>
    <!-- end 二维码扫描 -->

    <!-- start  设置wifi热点 -->
    <string name="input_wifi_host_password">请输入8-16位wifi热点密码</string>
    <string name="input_wifi_host_name">请输入wifi热点名称</string>
    <string name="wifi_host_open">开启wifi热点</string>
    <string name="open_wifi_hot">打开WIFI热点</string>
    <string name="opening_wifi_hot">正在打开热点...</string>
    <string name="close_wifi_hot">关闭WIFI热点</string>
    <string name="closeing_wifi_hot">正在关闭热点...</string>
    <!-- end   设置wifi热点 -->


    <string name="action_search">搜索</string>
    <string name="action_refresh">刷新</string>
    <string name="action_share">分享</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- 从相册选择图片  -->
    <string name="chat">主页</string>
    <string name="find">相册</string>
    <string name="tongxunlu">页面</string>

    <!-- 相片查看器 -->
    <string name="hello_world">Hello world!</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="title_activity_rx_java_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
