<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:background="@drawable/bg_baidihuibian_1"
        android:id="@+id/set_wifi_name_edittext"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="GuangKePai"
        android:maxLength="20"
        android:maxLines="1"
        android:lines="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_wifi_host_name"/>
   <EditText
       android:background="@drawable/bg_baidihuibian_1"
       android:id="@+id/set_wifi_pwd_edittext"
       android:layout_marginTop="20dp"
       android:layout_width="match_parent"
       android:maxLength="16"
       android:inputType="textPassword"
       android:maxLines="1"
       android:lines="1"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:padding="10dp"
       android:text=""
       android:layout_height="wrap_content"
       android:hint="@string/input_wifi_host_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/set_wifi_is_automatic_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="下次自动启动热点"
            />
    </LinearLayout>
    <Button
        android:id="@+id/set_wifihot_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/wifi_host_open"
        />
</LinearLayout>
